Adjusted persona to persona ejs file

--- a/views/dialogue/personaToPersonaHome.ejs
+++ b/views/dialogue/personaToPersonaHome.ejs
@@ -4,11 +4,9 @@
 <%-include ("../partials/emptybackbar.ejs") %>
 
 <!-- title -->
-<br>
-<br>
-<div class="col text-center  mx-4">
-    <h3>Persona to Persona Chat</h3>
-    <p>How would these two personas chat with each other?</p>
+<div class="col text-center">
+    <h1>Persona to Persona Chat</h1>
+    <p style="font-size: 12px;">How would these two personas chat with each other?</p>
 </div>
 </div>
 </div>
@@ -26,7 +24,7 @@
                     </div>
                 </div>
             </div>
-            <br>
+      
             <div class="col-12">
                 <div class="card text-center">
                     <div class="card-body mx-1">
@@ -36,7 +34,7 @@
                     </div>
                 </div>
             </div>
-            <br>
+   
             <div class="col-12">
                 <div class="card text-center">
                     <div class="card-body mx-1">
@@ -46,9 +44,7 @@
                     </div>
                 </div>
             </div>
-            <br>
-            <br>
-            <button class="btn" type="submit">Send</button>
+            <button class="btn mt-3" type="submit">Send</button>
         </form>
     </div>
 </div>
