--- a/views/dialogue/userPersonaHome.ejs
+++ b/views/dialogue/userPersonaHome.ejs
@@ -4,13 +4,9 @@
 <%- include ("../partials/emptybackbar.ejs") %>
 
 <!-- title -->
-<br>
-<br>
-<br>
 <div class="col text-center">
-    <h3>Chat with a persona.</h3>
-    <p>Have you ever wanted to talk to a character?</p>
-</div>
+    <h1>Chat with a persona.</h1>
+    <p style="font-size: 12px;">Have you ever wanted to talk to a character?</p>
 </div>
 </div>
 
@@ -27,8 +23,6 @@
                     </div>
                 </div>
             </div>
-            <br>
-            <br>
             <br>
             <div class="col-12">
                 <div class="card text-center">
