Adjust profile page buttons

--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -3,7 +3,7 @@
 <%-include ('../partials/header-internal.ejs')%>
 
 <div class="container-fluid">
-  <div class="container text-center align-item-center pt-4" id="decor_user">
+  <div class="container text-center align-item-center" id="decor_user">
     <div class="pb-4 pt-5">
       <form action="/upload" method="post" enctype="multipart/form-data">
         <label for="fileToUpload">
@@ -44,7 +44,7 @@
             </div>
           </a>
         </div>
-        <br />
+        
 
         <!-- Filters -->
         <div class="card p-3 bg-light btn">
@@ -59,7 +59,7 @@
             </div>
           </a>
         </div>
-        <br />
+ 
 
         <!-- Saved Persona -->
         <div class="card p-3 bg-light btn" >
@@ -72,7 +72,6 @@
             </div>
           </a>
         </div>
-        <br />
 
         <!-- Saved Dialogue -->
         <div class="card p-3 bg-light btn" >
@@ -85,7 +84,7 @@
             </div>
           </a>
         </div>
-        <br />
+   
 
         <!-- About Us -->
         <div class="card p-3 bg-light btn" >
@@ -100,7 +99,7 @@
             </div>
           </a>
         </div>
-        <br />
+   
 
         <!-- FAQ -->
         <div class="card p-3 bg-light btn" >
@@ -115,11 +114,11 @@
             </div>
           </a>
         </div>
-        <br />
+     
    
 
         <!-- Logout -->
-        <div class="text-center ">
+        <div class="text-center mt-2 ">
           <button
             type="button"
             class="btn bg-light "
