--- a/views/fromSavedPersona/personaToPersonaChat.ejs
+++ b/views/fromSavedPersona/personaToPersonaChat.ejs
@@ -1,67 +1,63 @@
 <!-- header -->
 <%-include ("../partials/header-internal.ejs")%>
 <div class="container-fluid mb-5 pb-5" id="chatContainer">
-    <!-- Existing chat messages -->
-    <% PersonaPersonaChatHistory.forEach((entry, index) => { %>
-    <div class="row">
-        <!-- Display bot's output -->
-        <div class="col-12 my-2" id="botOutput">
+  <!-- Existing chat messages -->
+  <% PersonaPersonaChatHistory.forEach((entry, index) => { %>
+  <div class="row">
+    <!-- Display bot's output -->
+    <div class="col-12 my-2" id="botOutput">
+      <div class="card">
+        <form action="saved/persona/dialogue/chat/persona-to-persona/save" method="post">
+          <div class="col-12" id="botOutput">
             <div class="card">
-                <form action="saved/persona/dialogue/chat/persona-to-persona/save" method="post">
-                    <div class="col-12" id="botOutput">
-                        <div class="card">
-                            <!-- save button -->
-                            <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon"
-                                type="submit" name="save" value="<%- i %>">
-                                star_border
-                            </button>
-                            <div class="card-body m-3">
-                                <div class="card-title">Dialogue:</div>
-                                <% const conversationLines = entry.botResponse.split('\n'); %>
-                                <% for (let j = 0; j < conversationLines.length; j++) { %>
-                                <% const line = conversationLines[j].trim(); %>
-                                <% if (line) { %>
-                                <div class="card-text">
-                                    <%= line %>
-                                </div>
-                                <br>
-                                <% } %>
-                                <% } %>
-                            </div>
-                        </div>
-                    </div>
+              <!-- save button -->
+              <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit" name="save" value="<%- i %>">
+                star_border
+              </button>
+              <div class="card-body m-3">
+                <div class="card-title">Dialogue:</div>
+                <% const conversationLines = entry.botResponse.split('\n'); %>
+                <% for (let j = 0; j < conversationLines.length; j++) { %>
+                <% const line = conversationLines[j].trim(); %>
+                <% if (line) { %>
+                <div class="card-text">
+                  <%= line %>
+                </div>
+                <br>
+                <% } %>
+                <% } %>
+              </div>
             </div>
-            <hr>
-            <% }) %>
-        </div>
-
-        <form action="/saved/persona/dialogue/chat/persona-to-persona-chat/save" method="post"
-            class="text-center input-container">
-            <div class="row">
-                <input class="form-control col" rows="1" cols="1" type="text" name="response"
-                    placeholder="<%= placeholderText %>" />
-                <button class="btn col-3" type="submit">Send</button>
-            </div>
-        </form>
-
-        <div class="px-5 text-center d-none" id="loadingCard" style="padding-top: 200px;">
-            <span id="loadingContainer"><i class="fa-solid fa-cat fa-bounce fa-2xl"
-                    style="color: #ffffff;"></i></i></span>
-            <p style="color: #ffffff;">Please watch this cat while we finish generating!</p>
-        </div>
+          </div>
+      </div>
+      <hr>
+      <% }) %>
     </div>
 
-    <script>
-        $(document).ready(function () {
-            $('#send').click(function () {
-                // show card with loading indicator
-                $("#loadingCard").removeClass("d-none");
-                $("#generalContainer").addClass("d-none");
-            });
-        });
-    </script>
+    <form action="/saved/persona/dialogue/chat/persona-to-persona-chat/save" method="post" class="text-center input-container">
+      <div class="row">
+        <input class="form-control col" rows="1" cols="1" type="text" name="response" placeholder="<%= placeholderText %>" />
+        <button class="btn col-3" type="submit" id="send">Send</button>
+      </div>
+    </form>
+
+    <div class="p-5 text-center d-none" id="loadingCard">
+      <span id="loadingContainer"><i class="fa-solid fa-cat fa-bounce fa-2xl" style="color: #ffffff;"></i></i></span>
+      <p style="color: #ffffff;">Please watch this cat while we finish generating!</p>
+    </div>
+  </div>
+</div>
+
+<script>
+  $(document).ready(function() {
+    $('#send').click(function() {
+      // show card with loading indicator
+      $("#loadingCard").removeClass("d-none");
+    });
+  });
+</script>
 
 
-    <!-- navbar and footer -->
-    <%-include ("../partials/navbar.ejs")%>
-    <%-include ("../partials/footer.ejs")%>
+<!-- navbar and footer -->
+<%-include ("../partials/navbar.ejs")%>
+<%-include ("../partials/footer.ejs")%>
