--- a/views/fromSavedPersona/userPersonaHome.ejs
+++ b/views/fromSavedPersona/userPersonaHome.ejs
@@ -8,58 +8,56 @@
 <br>
 <br>
 <div class="col text-center mx-5">
-    <h3>Chat with a persona.</h3>
-    <p>Have you ever wanted to talk to a character?</p>
+  <h3>Chat with a persona.</h3>
+  <p>Have you ever wanted to talk to a character?</p>
 </div>
 </div>
 </div>
 
 <!-- content -->
-<div class="container-fluid" style="padding-top: 50px;">
-    <div class="row">
-        <form action="/saved/persona/dialogue/chat/user-persona-chat" method="post" class="text-center">
+<div class="container-fluid" id="inputContainer" style="padding-top: 50px;">
+  <div class="row">
+    <form action="/saved/persona/dialogue/chat/user-persona-chat" method="post" class="text-center">
 
-            <div class="col-12">
-                <div class="card text-center">
-                    <div class="card-body mx-1">
-                        <label class="card-title">Persona:</label><br />
-                        <textarea class="form-control text-center" readonly><%= persona %></textarea>
-                    </div>
-                </div>
-            </div>
-            <br>
-            <br>
-            <br>
-            <div class="col-12">
-                <div class="card text-center">
-                    <div class="card-body mx-1">
-                        <label class="card-title">Start your chat!</label><br>
-                        <input class="form-control" type="text" name="chat"
-                            placeholder="Enter what you want to say to the persona" />
-                    </div>
-                </div>
-            </div>
-            <br>
-            <br>
-            <button class="btn" type="submit">Send</button>
-        </form>
-    </div>
+      <div class="col-12">
+        <div class="card text-center">
+          <div class="card-body mx-1">
+            <label class="card-title">Persona:</label><br />
+            <textarea class="form-control text-center" readonly><%= persona %></textarea>
+          </div>
+        </div>
+      </div>
+      <br>
+      <br>
+      <br>
+      <div class="col-12">
+        <div class="card text-center">
+          <div class="card-body mx-1">
+            <label class="card-title">Start your chat!</label><br>
+            <input class="form-control" type="text" name="chat" placeholder="Enter what you want to say to the persona" />
+          </div>
+        </div>
+      </div>
+      <br>
+      <br>
+      <button class="btn" type="submit">Send</button>
+    </form>
+  </div>
 </div>
 
 <div class="px-5 text-center d-none" id="loadingCard" style="padding-top: 200px;">
-    <span id="loadingContainer"><i class="fa-solid fa-cat fa-bounce fa-2xl" style="color: #ffffff;"></i></i></span>
-    <p style="color: #ffffff;">Please watch this cat while we finish generating!</p>
-</div>
+  <span id="loadingContainer"><i class="fa-solid fa-cat fa-bounce fa-2xl" style="color: #ffffff;"></i></i></span>
+  <p style="color: #ffffff;">Please watch this cat while we finish generating!</p>
 </div>
 
 <script>
-    $(document).ready(function () {
-        $('#send').click(function () {
-            // show card with loading indicator
-            $("#loadingCard").removeClass("d-none");
-            $("#generalContainer").addClass("d-none");
-        });
+  $(document).ready(function() {
+    $('#send').click(function() {
+      // show card with loading indicator
+      $("#loadingCard").removeClass("d-none");
+      $("#inputContainer").addClass("d-none");
     });
+  });
 </script>
 <!-- navbar and footer -->
 <%-include ("../partials/navbar.ejs")%>
