fix the edit icon on profile

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -40,7 +40,7 @@
 
 
 <form action="/persona/chat" method="post" class="text-center input-container">
-  <div class="row">
+  <div class="row p-3">
     <input class="form-control col" rows="1" cols="1" type="text" name="prompt" placeholder="<%= placeholderText %>" />
     <button class="btn col-3" type="submit" id="send">Send</button>
   </div>
