--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -4,7 +4,7 @@
 
 <div class="container-fluid">
   <div class="container text-center align-item-center" id="decor_user">
-    <div class="pb-4 pt-5">
+    <div class="pb-4 pt-4">
       <form action="/upload" method="post" enctype="multipart/form-data">
         <label for="fileToUpload">
           <div class="editUserImage" 
@@ -22,7 +22,7 @@
           </div>
         </label>
         <input type="file" name="fileToUpload" id="fileToUpload">
-        <input class="btn material-symbols-rounded editicon" type="submit" value="Upload" name="submit">
+        <button class="btn material-symbols-rounded editicon" type="submit" value="Upload">edit</button>
       </form>
     </div>
   </div>
