Fix connection with profile and saved dialogue

--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -75,7 +75,7 @@
 
         <!-- Saved Dialogue -->
         <div class="card p-3 bg-light btn" >
-          <a href="/saved/dialogue">
+          <a href="/saved/saved-dialogue">
             <div class="row">
               <div class="col-2">
                 <i class="fa-solid fa-heart"></i>
