--- a/views/saved/saved-dialogue.ejs
+++ b/views/saved/saved-dialogue.ejs
@@ -17,8 +17,8 @@
 </div>
 </div>
 
-<div class="container mt-5" style="padding-bottom: 100px; padding-top: 100px;">
-    <div class="accordion accordion-flush" id="accordionFlushExample">
+<div class="container card mt-2">
+    <div class="accordion-bg-dark accordion-flush p-3" id="accordionFlushExample">
         <% for (var i=0; i<savedDialogue.length; i++) { %>
         <div class="accordion-item">
             <h2 class="accordion-header">
