--- a/views/fromSavedPersona/innerDialogueChat.ejs
+++ b/views/fromSavedPersona/innerDialogueChat.ejs
@@ -16,7 +16,8 @@
           <div class="col-12" id="botOutput">
             <div class="card">
               <!-- save button -->
-              <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" id="save" type="submit" name="save" value="<%- i %>">
+              <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" id="save"
+                type="submit" name="save" value="<%- i %>">
                 star_border
               </button>
 
@@ -43,8 +44,16 @@
 </div>
 
 <script>
-  $(document).ready(function() {
-    $('button#save').click(function() {
+  $(document).ready(function () {
+    const container = document.getElementById('chatContainer');
+
+    // Scroll to the bottom of the container
+    container.scrollIntoView({
+      behavior: 'smooth',
+      block: 'end'
+    });
+
+    $('#send').click(function () {
       // show card with loading indicator
       $("#loadingCard").removeClass("d-none");
     });
