--- a/views/dialogue/innerDialogueChat.ejs
+++ b/views/dialogue/innerDialogueChat.ejs
@@ -18,7 +18,7 @@
               <!-- save button -->
               <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit"
                 name="save" value="<%- i %>">
-                star_border
+                favorite_border
               </button>
               <div class="card-body m-3">
                 <div class="card-text" name="data"><%- innerDialogueHistory[i].botResponse %>
