--- a/views/dialogue/personaToPersonaChat.ejs
+++ b/views/dialogue/personaToPersonaChat.ejs
@@ -9,7 +9,7 @@
       <div class="card">
         <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit" name="save"
           value="<%= index %>">
-          star_border
+          favorite_border
         </button>
         <div class="card-body m-3">
           <div class="card-title">Dialogue:</div>
