fixed dialogue routes

--- a/views/fromSavedPersona/personaToPersonaChat.ejs
+++ b/views/fromSavedPersona/personaToPersonaChat.ejs
@@ -12,7 +12,7 @@
             <div class="card">
               <!-- save button -->
               <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit"
-                name="save" value="<%- i %>">
+                name="save">
                 favorite_border
               </button>
               <div class="card-body m-3">
