--- a/views/dialogue/personaToPersonaHome.ejs
+++ b/views/dialogue/personaToPersonaHome.ejs
@@ -28,7 +28,7 @@
         <div class="card text-center">
           <div class="card-body mx-1">
             <label class="card-title">Describe the second persona</label><br />
-            <input class="form-control" type="text" name="secondPersona" placeholder="Enter the situation your persona is in" />
+            <input class="form-control" type="text" name="secondPersona" placeholder="Enter a persona description" />
           </div>
         </div>
       </div>
